Fix large gap between sections

--- a/css/page.css
+++ b/css/page.css
@@ -26,7 +26,7 @@
 }
 
 .ui.footer{
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 /* Menu */
@@ -73,6 +73,21 @@
   text-align: center;
   padding-top: 100px;
 }
+
+/* Section nova */
+ #nova {
+	 margin-top: 15px;
+ }
+
+ #nova .content-element {
+ 	  padding-top: 100px !important;
+ 	  padding-bottom: 50px !important;
+ }
+
+ #nova .content-element:nth-last-child(2) {
+ 	  padding-top: 50px !important;
+ 	  padding-bottom: 100px !important;
+ }
 
 /* Sub Pages */
 #sub-page {
